--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="col-1-of-3 proyects__box">
                             <div class="proyects__box--img">
                                 <img src="imgs/fotoscv2019_individual.jpg">
-                                <a href="#" class="link proyects--git">
+                                <a href="https://github.com/SebastianKrawiec/proyect1" class="link proyects--git">
                                     <img src="imgs/GitBlanco.png" alt="gitHubLogo">
                                 </a>
                                 <a href="" class="link proyects--show">
@@ -102,7 +102,9 @@
                         </div>
                         <div class="col-2-of-3 proyects__box">
                             <p class="proyects__box--content">
-                                breve descriptión del proyecto
+                                Simulación de una web app de viajes de aventura. 
+                                Diseño completo en scss y completamente reponsivo. 
+                                No soy creador del diseño.
                             </p>
                         </div>
                     </div>
@@ -111,7 +113,7 @@
                         <div class="col-1-of-3 proyects__box">
                             <div class="proyects__box--img">
                                 <img src="imgs/fotoscv2019_individual.jpg">
-                                <a href="#" class="link proyects--git">
+                                <a href="https://github.com/SebastianKrawiec/proyect2" class="link proyects--git">
                                     <img src="imgs/GitBlanco.png" alt="gitHubLogo">
                                 </a>
                                 <a href="" class="link proyects--show">
@@ -121,7 +123,9 @@
                         </div>
                         <div class="col-2-of-3 proyects__box">
                             <p class="proyects__box--content">
-                                breve descriptión del proyecto
+                                Simulación de de la web app AirbNb.
+                                Diseño realizado en scss y completamente responsivo.
+                                No soy creador del diseño.
                             </p>
                         </div>
                     </div>
