--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="row">
                         <div class="col-1-of-3 proyects__box">
                             <div class="proyects__box--img">
-                                <img src="imgs/fotoscv2019_individual.jpg">
+                                <img src="imgs/muestraP1.jpg">
                                 <a href="https://github.com/SebastianKrawiec/proyect1" class="link proyects--git">
                                     <img src="imgs/GitBlanco.png" alt="gitHubLogo">
                                 </a>
@@ -112,7 +112,7 @@
                     <div class="row">
                         <div class="col-1-of-3 proyects__box">
                             <div class="proyects__box--img">
-                                <img src="imgs/fotoscv2019_individual.jpg">
+                                <img src="imgs/muestraP2.jpg">
                                 <a href="https://github.com/SebastianKrawiec/proyect2" class="link proyects--git">
                                     <img src="imgs/GitBlanco.png" alt="gitHubLogo">
                                 </a>
