adding proyect1 adress

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 <a href="https://github.com/SebastianKrawiec/proyect1" class="link proyects--git">
                                     <img src="imgs/GitBlanco.png" alt="gitHubLogo">
                                 </a>
-                                <a href="" class="link proyects--show">
+                                <a href="https://sebastiankrawiec.github.io/proyect1/." class="link proyects--show">
                                     show
                                 </a>
                             </div>
