--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <a href="https://github.com/SebastianKrawiec/proyect2" class="link proyects--git">
                                     <img src="imgs/GitBlanco.png" alt="gitHubLogo">
                                 </a>
-                                <a href="" class="link proyects--show">
+                                <a href="https://sebastiankrawiec.github.io/proyect2/" class="link proyects--show">
                                     show
                                 </a>
                             </div>
