adding proyect3 thumnail and address

--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
                     <div class="row">
                         <div class="col-1-of-3 proyects__box">
                             <div class="proyects__box--img">
-                                <img src="imgs/fotoscv2019_individual.jpg">
+                                <img src="imgs/muestraP3.jpg
                                 <a href="#" class="link proyects--git">
                                     <img src="imgs/GitBlanco.png" alt="gitHubLogo">
                                 </a>
-                                <a href="" class="link proyects--show">
+                                <a href="https://sebastiankrawiec.github.io/proyect3/" class="link proyects--show">
                                     show
                                 </a>
                             </div>
