--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="row">
                         <div class="col-1-of-3 proyects__box">
                             <div class="proyects__box--img">
-                                <img src="imgs/muestraP3.jpg
+                                <img src="imgs/muestraP3.jpg">
                                 <a href="#" class="link proyects--git">
                                     <img src="imgs/GitBlanco.png" alt="gitHubLogo">
                                 </a>
