adding proyect3s link

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="col-1-of-3 proyects__box">
                             <div class="proyects__box--img">
                                 <img src="imgs/muestraP3.jpg">
-                                <a href="#" class="link proyects--git">
+                                <a href="https://github.com/SebastianKrawiec/proyect3" class="link proyects--git">
                                     <img src="imgs/GitBlanco.png" alt="gitHubLogo">
                                 </a>
                                 <a href="https://sebastiankrawiec.github.io/proyect3/" class="link proyects--show">
