--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
                         </div>
                         <div class="col-2-of-3 proyects__box">
                             <p class="proyects__box--content">
-                                breve descriptión del proyecto
+                                Diseño de página web de venta de indumentaria para treking.
+                                Marca ficticia y diseño propio.
+                                Diseño responsivo en proceso.
                             </p>
                         </div>
                     </div>
