adding text changes

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                         <div class="col-2-of-3 proyects__box">
                             <p class="proyects__box--content">
                                 Simulación de una web app de viajes de aventura. 
-                                Diseño completo en scss y completamente reponsivo. 
+                                Diseño completo en scss y completamente reponsivo, elavorado con metodologia
+                                FLOAT. 
                                 No soy creador del diseño.
                             </p>
                         </div>
@@ -124,7 +125,8 @@
                         <div class="col-2-of-3 proyects__box">
                             <p class="proyects__box--content">
                                 Simulación de de la web app AirbNb.
-                                Diseño realizado en scss y completamente responsivo.
+                                Diseño realizado en scss y completamente responsivo, empleando a metodologia
+                                FLEX-BOX.
                                 No soy creador del diseño.
                             </p>
                         </div>
@@ -145,7 +147,7 @@
                         <div class="col-2-of-3 proyects__box">
                             <p class="proyects__box--content">
                                 Diseño de página web de venta de indumentaria para treking.
-                                Marca ficticia y diseño propio.
+                                Marca ficticia y diseño propio, elavorado con metodologia FLOAT.
                                 Diseño responsivo en proceso.
                             </p>
                         </div>
